Avance reporte SIAF

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenActividadYDependencia.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenActividadYDependencia.cshtml
@@ -98,7 +98,7 @@
 
                     <p class="h2 text-center">@Model.titulo</p>
 
-                    <div class="table-responsive mt-5" style="min-height:300px">
+                    <div class="table-responsive mt-5">
                         <table class="table table-borderless" style="width: 100%;">
                             @if (Model.listaResumenPorActividad != null && Model.listaResumenPorActividad.Count() > 0)
                             {
