--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_AsignarPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_AsignarPlanilla.cshtml
@@ -22,18 +22,16 @@
     <div class="form-row">
         <div class="col-6">
             <div class="form-group">
-                @*@Html.LabelFor(model => model.categoriaPlanillaID, new { @class = "control-label" })*@
-                <label class="control-label" for="categoriaPlanillaID">Planilla</label>
-                @Html.DropDownListFor(model => model.categoriaPlanillaID, ViewBag.ListaCategoriasPlanillas as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
+                @Html.LabelFor(model => model.categoriaPlanillaID, new { @class = "control-label" })
+                @Html.DropDownListFor(model => model.categoriaPlanillaID, ViewBag.ListaCategoriasPlanillas as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase" })
                 @Html.ValidationMessageFor(model => model.categoriaPlanillaID, null, new { @class = "text-danger" })
             </div>
         </div>
         <div class="col-6">
             <div class="form-group">
-                @*@Html.LabelFor(model => model.trabajadorCod, new { @class = "control-label" })*@
-                <label class="control-label" for="trabajadorCod">Descripción</label>
-                @Html.TextBoxFor(model => model.trabajadorCod, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.trabajadorCod, null, new { @class = "text-danger" })
+                @Html.LabelFor(model => model.grupoTrabajoID, new { @class = "control-label" })
+                @Html.DropDownListFor(model => model.grupoTrabajoID, ViewBag.ListaGruposTrabajo as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
+                @Html.ValidationMessageFor(model => model.grupoTrabajoID, null, new { @class = "text-danger" })
             </div>
         </div>
 
@@ -42,11 +40,10 @@
         <div class="form-row">
             <div class="col-12">
                 <div class="mb-3 row">
-                    @*@Html.LabelFor(model => model.vinculoID, new { @class = "col-sm-2 control-label" })*@
-                    <label class="col-sm-2 control-label" for="vinculoID">Dependencia</label>
+                    @Html.LabelFor(model => model.dependenciaID, new { @class = "col-sm-2 control-label" })
                     <div class="col-sm-10">
-                        @Html.DropDownListFor(model => model.vinculoID, ViewBag.ListaDependencias as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
-                        @Html.ValidationMessageFor(model => model.vinculoID, null, new { @class = "text-danger" })
+                        @Html.DropDownListFor(model => model.dependenciaID, ViewBag.ListaDependencias as SelectList, "[ SELECCIONAR ]", new { @class = "form-control text-uppercase select-filter-modal" })
+                        @Html.ValidationMessageFor(model => model.dependenciaID, null, new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
@@ -77,17 +74,6 @@
             theme: 'bootstrap4',
             dropdownParent: $('#modal-container-lg'),
             placeholder: "[ SELECCIONAR ]"
-        }).on('hide', function (e) {
-            e.stopPropagation();
-        });
-
-        $('.input-group.date').datepicker({
-            todayBtn: 'linked',
-            language: 'es',
-            format: 'dd/mm/yyyy',
-            autoclose: true,
-            weekStart: 0,
-            orientation: 'auto'
         }).on('hide', function (e) {
             e.stopPropagation();
         });
